--- a/submission/references.bib
+++ b/submission/references.bib
@@ -1,15 +1,47 @@
-@book{haber2011,
-  title = {Digital past: Geschichtswissenschaft im digitalen Zeitalter},
-  shorttitle = {Digital past},
-  author = {Haber, Peter},
-  date = {2011},
-  publisher = {Oldenbourg Verlag},
-  location = {München},
-  doi = {10.1515/9783486712339},
-  isbn = {978-3-486-70704-5},
-  langid = {german},
-  pagetotal = {184},
-  keywords = {Data processing,Electronic information resources,Historiography,Internet,Methodology},
-  annotation = {OCLC: ocn767717529},
-  file = {/Users/username/Zotero/storage/L2Z5AGBR/10.1515_9783486712339.pdf}
+
+@article{ChatGPT_1,
+    title={Colossal-AI: A Unified Deep Learning System For Large-Scale Parallel Training},
+    author={Bian, Zhengda and Liu, Hongxin and Wang, Boxiang and Huang, Haichen and Li, 
+            Yongbin and Wang, Chuanrui and Cui, Fan and You, Yang},
+    journal={arXiv preprint arXiv:2110.14883},
+    year={2021}
 }
+
+@article{socialism_2,
+     title = {Fa lanxi ren yu jinshi wenming, 法兰西人与近世文明, The French and contemporary civilization},
+     author = {Chen Duxiu},
+     journal = {zhuzuo xuanbian CDXZZXB},
+     date= {09/15/1915}
+}
+
+@article{character_3,
+     title = {the six volume set of Chen Duxiu zhuzuo xuanbian},
+     author = {Chen Duxiu},
+     journal = {zhuzuo xuanbian CDXZZXB},
+     year = {1914--1940}
+}
+
+@article{1930_4,
+     title = {fifteen articles : 愛國心與自覺心[Patriotism and self-awareness],吾人最後之覺悟[My final awakening],
+              談政治[Talk about politics], 社会主义批评 [A critique of socialism], 马克思学说 [A study of Marxism], 
+              资产阶级的革命与革命的资产阶级 [Bourgeois revolution and the revolution’s bourgeoisie], 
+              我们的回答 [Our response], 给戴季陶的一封信 [A letter to Dai Jitao], 
+              孙中山之民主主义中之民族主义是不是国家主义? [Is the people’s principle in Sun Yatsen’s democracy nationalism?],
+              世界革命与中国民族解放运动 [World revolution and the liberation of Chinese people],
+              关于中国革命问题致中共中央信 [A letter to CCP Central on the question of Chinese revolution]
+              谁能救中国？怎样救中国？[Who can save China? How to save China?],
+              我们不要害怕资本主义 [We do not need to be afraid of capitalism],
+              给西流的信 [A letter to Xiliu]},
+     author = {Chen Duxiu},
+     journal = {CDXZZXB},
+     year = {1914--1940}
+}
+
+@article{degrees_5,
+     title = {给西流的信 [A letter to Xiliu]}
+     author = {chen Duxiu}
+     journal = {CDXZZXB}
+     year = {1940}
+     note = {Published on 03/02/40},
+}
+     
